<resources>
    <string name="app_name" translatable="false">Event Me</string>
    <string name="title_activity_login">Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_drawer">Home</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!--facebook-->
    <string name="facebook_app_id" translatable="false">248490082167538</string>
    <!--strings do menu eventos-->
    <string name="aceitar">OK</string>
    <string name="cancelar">Cancel</string>
    <string name="view_by_prompt">View by:</string>
    <string name="action_search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_events">Events</string>
    <string name="title_friends">Friends and Groups</string>
    <string name="tab_title_feed">Feed</string>
    <string name="tab_title_notifications">Notifications</string>
    <string name="tab_title_friends">Friends</string>
    <string name="tab_title_groups">Groups</string>
    <string name="msg_apagar_evento">Do you wish to remove?</string>
    <string name="going_event">Going</string>
    <string name="not_going_event">Not going</string>
    <string-array name="view_by">
        <item>View by: Most recent</item>
        <item>View by: Nearest</item>
        <item>View by: Cheaper</item>
        <item>View by: Going</item>
        <item>View by: Not going</item>
    </string-array>
    <string name="title_activity_map">Map</string>
    <string name="NOME">Name</string>
    <string name="LOCALIZAÇÃO">Location</string>
    <string name="site" translatable="false">Website</string>
    <string name="p" translatable="false">p</string>
    <string name="email" translatable="false">E-Mail</string>
    <string name="price">"Price: "</string>
    <string name="selectPicture">Select Picture</string>
    <string name="InsertDescription">Insert a description</string>
    <string name="latitude" translatable="false">latitude</string>
    <string name="longitude" translatable="false">longitude</string>
    <string name="InsertLatLng">Insert latitude and longitude</string>
    <string name="SelectDate">Select a date</string>
    <string name="PickDate">Pick Date</string>
    <string-array name="sex_array">
        <item>Sexo</item>
        <item>Feminino</item>
        <item>Masculino</item>
        <item>Indefinido</item>
    </string-array>
    <string name="descricao">Description</string>
    <string name="numtele">Phone number</string>
    <string name="preco">Price</string>
    <string name="CreateEventWarn">Event name or date are Empty</string>
    <string name="SelectTime">Select Time</string>
    <string name="PickPrice">Pick price</string>
    <string name="Cancelled">Cancelled</string>
    <string name="GPSNotFound">GPS signal not available</string>
    <string name="ErrorSpinner">No such option on spinner</string>
    <string name="List">List</string>
    <string name="Map">Map</string>
    <string name="EventRemoved">Event Removed</string>
    <string name="ErrorRemoveEvent">An error occurred while removing event</string>
    <string name="NewEvent">NEW</string>
    <string name="NotFound">" not found"</string>
    <string name="MyProfile">My Profile</string>
    <string name="DefaultEventName">Name</string>
    <string name="EventPrivate">Private</string>
    <string name="EventPublic">Public</string>
    <string name="EventDate">Event Date:</string>
    <string name="EventEndDate">End Date:</string>
    <string name="EventLocation">Location:</string>
    <string name="EventDescription">Description:</string>
    <string name="Location">Location</string>
    <string name="AddPeople">Add People</string>
    <string name="CanFriendsInvite">Friends can invite?</string>
    <string name="Create">Create</string>
    <string name="ViewComments">View comments</string>
    <string name="WhosGoing">Who\'s going?</string>
    <string name="CreateNewEvent">Create New Event</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="nome">Name:*</string>
    <string name="mail" translatable="false">Email:*</string>
    <string name="password" translatable="false">Password:*</string>
    <string name="rpassword">Repeat \nPassword:*</string>
    <string name="telemovel">Phone Number:</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_logout">Logout</string>
    <string name="signIn">Sign In</string>
    <string name="help">HELP</string>
    <string name="event_list">LIST</string>
    <string name="push">Notificações Push</string>
    <string name="infp">Mostrar Informação Privada</string>
    <string name="reset">Reset Dados</string>
    <string name="notificacaoTitulo">New follower!</string>
    <string name="DadosLimpos">Data has been cleaned!</string>
    <string name="opcao1">Add new friend</string>
    <string name="opcao2">Create new group</string>
    <string name="addPeople">  Add People  </string>
    <string name="InvitePeople">Friends can invite?</string>
    <string name="Create2">Create</string>
    <string name="descricao2">Description</string>
    <string name="price2">Price</string>
    <string name="price3">Price:</string>
    <string name="loc">Location:</string>
    <string name="loc2">Location</string>
    <string name="datafim">End Date:</string>
    <string name="temdatafim">Has end date?</string>
    <string name="DataInit">Event Date:</string>
    <string name="pub">Public</string>
    <string name="nomeevento">Name</string>
    <string name="descrip">Description:</string>
    <string name="InsertDescrip">Insert a description</string>
    <string name="IserLatLng">Insert latitude and longitude</string>
    <string name="name">Name</string>
    <string name="NomeGrupo">Nome do Grupo:</string>
    <string name="EscolherImg">Escolher Imagem</string>
    <string name="EscolherAmigos">Escolher Amigos</string>
    <string name="PrimNome">First Name:</string>
    <string name="ultimoNome">Last Name:</string>
    <string name="email2">Email:</string>
    <string name="pass">Password:</string>
    <string name="cell">Telemóvel:</string>
    <string name="submit">Submeter</string>
    <string name="criargrupo">Criar Grupo</string>
    <string name="createnevent">Create New Event</string>
    <string name="Createngroup">Create New Group</string>
    <string name="usercreate">Created</string>
    <string name="editprofile">Edit Profile</string>
    <string name="actionsubmit">Submit</string>
</resources>