<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/title_home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/events"
            android:title="@string/title_events" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/friendsgroups"
            android:title="@string/title_friends" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/title_about" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/title_settings" />
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/logout"
            android:title="@string/title_logout" />

    </group>

</menu>
