<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="almapenada.daam.fragments.SettingsFragment"
    android:weightSum="1"
    android:contextClickable="false"
    android:clickable="true">

    <!-- TODO: Update blank fragment layout -->

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/push"
        android:id="@+id/switch1"
        android:layout_weight="0.08"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:checked="false"
        android:splitTrack="false"
        android:singleLine="false"
        android:showText="false"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:enabled="true" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/infp"
        android:id="@+id/switch2"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_weight="0.08"
        android:textSize="18dp"
        android:checked="false"
        android:layout_marginTop="20dp"
        android:enabled="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/button"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="#64f2b023"
        android:layout_marginTop="20dp"
        android:clickable="true" />
</LinearLayout>
