<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateEventFragment"
    android:orientation="vertical"
    android:background="#fffaea">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/event_name"
            android:maxLength="20"
            android:ems="4"
            android:layout_alignTop="@+id/event_img"
            android:layout_toRightOf="@+id/event_img"
            android:layout_toEndOf="@+id/event_img"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="4dp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/event_img"
            android:background="@drawable/add_file"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp" />

        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:gravity="center"
            android:layout_below="@+id/event_name"
            android:layout_alignLeft="@+id/event_name"
            android:layout_alignRight="@+id/event_name"
            android:layout_marginTop="5dp">
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".08">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EventPrivate"
                android:id="@+id/eventPrivate"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pub"
                android:id="@+id/eventPublic"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:checked="false" />
        </TableRow>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/event_img"
        android:layout_weight="0.01">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DataInit"
            android:id="@+id/event_date"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp" />

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/date_picker"
            android:layout_toRightOf="@+id/event_date"
            android:layout_marginLeft="5dp"
            android:background="@drawable/events"
            android:adjustViewBounds="false"
            android:baselineAlignBottom="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/datafim"
            android:id="@+id/event_end"
            android:layout_weight="1.0"
            android:enabled="false"
            android:layout_toRightOf="@+id/event_date"
            android:layout_marginLeft="55dp" />

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/date_end_picker"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/event_end"
            android:background="@drawable/events" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch1"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".08"
            android:checked="false"
            android:layout_below="@+id/event_date"
            android:layout_marginTop="5dp"
            android:layout_alignLeft="@+id/event_end" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.09">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/loc"
            android:id="@+id/event_location"
            android:layout_marginLeft="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_location_input"
            android:maxLength="20"
            android:enabled="false"
            android:layout_weight="1.0"
            android:text="@string/loc2"
            android:ems="4"
            android:textSize="11dp"
            android:layout_toRightOf="@+id/event_location"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="50dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/price3"
            android:id="@+id/event_price"
            android:layout_below="@+id/event_location"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_price_input"
            android:layout_toRightOf="@+id/event_price"
            android:layout_marginRight="20dp"
            android:layout_alignBottom="@+id/event_price"
            android:layout_alignLeft="@+id/event_description_input" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/descrip"
            android:id="@+id/event_description"
            android:layout_below="@+id/event_price"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_description_input"
            android:ems="4"
            android:singleLine="false"
            android:layout_toRightOf="@+id/event_description"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/event_price_input" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0.04">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:text="@string/addPeople"
            android:id="@+id/event_people"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/myyellowbutton" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InvitePeople"
            android:id="@+id/event_invitable_friends"
            android:layout_gravity="center_horizontal"
            android:checked="true"
            android:layout_weight=".08"
            android:layout_toRightOf="@+id/event_people"
            android:layout_marginLeft="40dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:text="@string/Create2"
            android:id="@+id/event_done"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/myyellowbutton"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>
