<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="almapenada.daam.fragments.CreateNewGroup"
    android:background="#fffaea">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:id="@+id/signup_form">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NomeGrupo"
            android:id="@+id/firstname"
            android:textSize="20dp"
            android:layout_weight="0"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/putfirstname"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:nestedScrollingEnabled="true"
            android:layout_toRightOf="@+id/firstname"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EscolherImg"
            android:id="@+id/chooseImage"
            android:background="@drawable/myyellowbutton"
            android:padding="15dp"
            android:layout_below="@+id/putfirstname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/chooseImage"
            android:src="@drawable/ninja"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EscolherAmigos"
            android:id="@+id/button2"
            android:background="@drawable/myyellowbutton"
            android:padding="15dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/imageView3"
            android:layout_alignRight="@+id/chooseImage"
            android:layout_alignEnd="@+id/chooseImage" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/criargrupo"
            android:id="@+id/button3"
            android:background="@drawable/myyellowbutton"
            android:padding="15dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="63dp" />
    </RelativeLayout>

</FrameLayout>
