<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="almapenada.daam.fragments.ProfileFragment"
    android:weightSum="1">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.60"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:id="@+id/image"
            android:background="@drawable/add_img"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtName"
                android:textSize="16dp"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentRight="false"
                android:layout_marginLeft="10dp"
                android:hint="@string/NOME" />

            <EditText
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/txtLocal"
                android:enabled="true"
                android:textSize="16dp"
                android:textAlignment="center"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:hint="@string/LOCALIZAÇÃO" />

            <EditText
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtSite"
                android:textSize="16dp"
                android:textAlignment="center"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:hint="@string/site" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15">

        <EditText
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txtDesc"
            android:textAlignment="center"
            android:textSize="16dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:hint="@string/descricao" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Informação Privada"
            android:id="@+id/textView"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="0.12">

        <EditText
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/txtNumber"
            android:textAlignment="textStart"
            android:textSize="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:hint="@string/numtele" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="57dp">

        <EditText
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:layout_marginLeft="10dp"
            android:textSize="16dp"
            android:hint="@string/email" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:spinnerMode="dropdown"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</LinearLayout>
